# Components

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  pyproject.toml
.github/workflows/: qmllint.yml
qmlcomps/: CMakeLists.txt
qmlcomps/demo/: CMakeLists.txt  main.cpp  main.qml
qmlcomps/videocamera/: Back.qml  Back.qml~  CMakeLists.txt  Groove.qml  Handle.qml  Handle.qml~  Joystick.qml  Lights.qml  SparseLight.qml  SparseLight.qml~  camera.cpp  camera.h  joystickersignaler.cpp  joystickersignaler.h
